[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/SliderWithTextEdit_Slider.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SliderWithTextEdit.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SliderWithTextEdit_LineEdit.gd" type="Script" id=4]
[ext_resource path="res://UI/Fonts/Menu_Tiny.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/SliderWithTextEdit_LineEdit_Hint.gd" type="Script" id=6]

[node name="GridContainer" type="GridContainer"]
margin_right = 611.0
margin_bottom = 57.0
columns = 3
script = ExtResource( 3 )

[node name="PanelContainer02" type="PanelContainer" parent="."]
margin_right = 95.0
margin_bottom = 57.0
rect_min_size = Vector2( 95, 0 )

[node name="Label" type="Label" parent="PanelContainer02"]
margin_left = 7.0
margin_top = 7.0
margin_right = 88.0
margin_bottom = 50.0
text = "Text"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 99.0
margin_right = 525.0
margin_bottom = 57.0
rect_min_size = Vector2( 425, 0 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 419.0
margin_bottom = 50.0
alignment = 1

[node name="Slider" type="HSlider" parent="PanelContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 412.0
margin_bottom = 29.0
max_value = 99.0
value = 99.0
tick_count = 11
ticks_on_borders = true
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 529.0
margin_right = 611.0
margin_bottom = 57.0
theme = ExtResource( 1 )
align = 1
max_length = 2
placeholder_text = "99"
script = ExtResource( 4 )

[node name="Label" type="Label" parent="LineEdit"]
margin_left = 100.0
margin_top = 5.0
margin_right = 170.0
margin_bottom = 52.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Hit enter to set!"
autowrap = true
script = ExtResource( 6 )

[connection signal="CountUpdated" from="." to="PanelContainer/VBoxContainer/Slider" method="_on_GridContainer_CountUpdated"]
[connection signal="CountUpdated" from="." to="LineEdit" method="_on_GridContainer_CountUpdated"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="text_changed" from="LineEdit" to="LineEdit/Label" method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="LineEdit" to="LineEdit/Label" method="_on_LineEdit_text_entered"]
